# My-Project-Ideas

./: .gitignore  Dockerfile  README.md  fly.toml  main.py  plan.md  pyproject.toml
bot/: README.md  auth.py  db.py  github_client.py  groq_client.py  locking.py  main.py  models.py
bot/commands/: board.py  create_task.py  plan.py  push.py
